--- a/tutorial/01.html
+++ b/tutorial/01.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<base href="https://krdwrd.org/pages/dat/tutorial/input/" /> 
 		<title>Interactive KrdWrd Tutorial</title>
 		<link rel="stylesheet" type="text/css" href="01.css" />
 	</head>
@@ -14,20 +15,51 @@
 		</div>
 		<div class="bl">
            <h4>Intro</h4>
-           Hit "Submit" to start.
+		   This tutorial will help you getting used to the annotation guidelines.
+		   It assumes you are familiar with the
+           <a href="https://krdwrd.org/tutorial/html/" onclick="window.open(this.href, 'KrdWrdManual', 'resizable=true,scrollbars=yes,status=no,toolbar=yes'); return false;">manual</a>
+           (click to open in a new window, suitable for side-by-side viewing with this one. Or print the
+           <a href="https://krdwrd.org/tutorial/tutorial.pdf">pdf</a>).
+           <h4>How it works</h4>
+           <p>
+           The tutorial pretty much works like annotation on a real corpus:
+           you annotate a website, submit it, and get the next one. <br />
+           However, we inserted a validation step after submission:
+           You will stay at the current page and we will show you how your annotations diverged from ours.
+           </p>
+           <p>
+           Everything you got right will be left untouched, as it appeared on the original site, without any annotation.
+           Everything you got wrong will be highlighted as it was supposed to be.
+           Please take your time to go through this feedback carefully - you won't get any when working on the real corpus.
+           </p>
+           <p>
+           After inspection, you can click the <i>Next Page</i> button in the notification box at the top, or just use <i>Grab Page from Tutorial</i> from the KrdWrd status-bar menu, to advance.
+           You can return to your last tutorial step any time by hitting <i>Start Tutorial</i> once again.
+           Reset it by deleting your annotations on your <i>My Stats</i> page.
+           </p>
+           <h4>Start the tutorial</h4>
+           Now let's get going.
+           Move around your mouse on this page.
+           <i>You did that right from the start, didn't you? Busy little bees you are!</i>
+           You should get fancy highlighting wherever you go. 
+           Annotate some of the text here to get used to the keyboard shortcuts.
+           <br />
+           Then click on <i>Submit</i> in the KrdWrd menu.
+           You will get back to this page, with the validation result.
+           Hit <i>Next Page</i> then to get going with real pages.
 		</div>
-		<div class="bl">
+		<!--div class="bl">
            <h4>Available Tags</h4>
            <span class="sample" style="background-color: #F00">
-             Spam (1)
+             Bad (1)
            </span>
            <span class="sample" style="background-color: #FF0">  
-             Undecided (2)
+             Uncertain (2)
            </span>
            <span class="sample" style="background-color: #0F0">  
-             Ham (3)
+             Good (3)
            </span>
-		</div>
+		</div-->
 	</div>
 	</body>
 </html>
