former tutorial is now called manual. cf. r207 and #83

--- a/tutorial/01.html
+++ b/tutorial/01.html
@@ -17,9 +17,9 @@
            <h4>Intro</h4>
 		   This tutorial will help you getting used to the annotation guidelines.
 		   It assumes you are familiar with the
-           <a href="https://krdwrd.org/tutorial/html/" onclick="window.open(this.href, 'KrdWrdManual', 'resizable=true,scrollbars=yes,status=no,toolbar=yes'); return false;">manual</a>
+           <a href="https://krdwrd.org/manual/html/" onclick="window.open(this.href, 'KrdWrdManual', 'resizable=true,scrollbars=yes,status=no,toolbar=yes'); return false;">manual</a>
            (click to open in a new window, suitable for side-by-side viewing with this one. Or print the
-           <a href="https://krdwrd.org/tutorial/tutorial.pdf">pdf</a>).
+           <a href="https://krdwrd.org/manual/manual.pdf">pdf</a>).
            <h4>How it works</h4>
            <p>
            The tutorial pretty much works like annotation on a real corpus:
