minor changes: inserted OLs and ULs for readability...

--- a/tutorial/01.html
+++ b/tutorial/01.html
@@ -22,14 +22,20 @@
            <a href="https://krdwrd.org/manual/manual.pdf">pdf</a>).
            <h4>How it works</h4>
            <p>
-           The tutorial pretty much works like annotation on a real corpus:
-           you annotate a website, submit it, and get the next one. <br />
+           The tutorial pretty much works like annotation on a real corpus: you
+           <ol>
+             <li>annotate a Web page,</li>
+             <li>submit it, and</li>
+             <li>get the next one.</li>
+           </ol>
            However, we inserted a validation step after submission:
-           You will stay at the current page and we will show you how your annotations diverged from ours.
+           The current page will be re-displayed and will show how your annotations diverged from ours:
            </p>
            <p>
-           Everything you got right will be left untouched, as it appeared on the original site, without any annotation.
-           Everything you got wrong will be highlighted as it was supposed to be.
+           <ul>
+              <li>Everything you got right will be left untouched, as it appeared on the original site, without any annotation.</li>
+              <li>Everything you got wrong will be highlighted as it was supposed to be.</li>
+           </ul>
            Please take your time to go through this feedback carefully - you won't get any when working on the real corpus.
            </p>
            <p>
@@ -42,11 +48,12 @@
            Move around your mouse on this page.
            <i>You did that right from the start, didn't you? Busy little bees you are!</i>
            You should get fancy highlighting wherever you go. 
-           Annotate some of the text here to get used to the keyboard shortcuts.
-           <br />
-           Then click on <i>Submit</i> in the KrdWrd menu.
+           <ol>
+              <li>Annotate some of the text here to get used to the keyboard shortcuts.</li>
+              <li>Then click on <i>Submit</i> in the KrdWrd menu.</li>
            You will get back to this page, with the validation result.
-           Hit <i>Next Page</i> then to get going with real pages.
+              <li>Hit <i>Next Page</i> to get going with real pages.</li>
+           </ol>
 		</div>
 		<!--div class="bl">
            <h4>Available Tags</h4>
