decent name for tutorial css; change base href to match db's static/ dir layout;

--- a/tutorial/01.html
+++ b/tutorial/01.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<base href="https://krdwrd.org/pages/dat/tutorial/input/" /> 
+		<base href="https://krdwrd.org/pages/static/" /> 
 		<title>Interactive KrdWrd Tutorial</title>
-		<link rel="stylesheet" type="text/css" href="01.css" />
+		<link rel="stylesheet" type="text/css" href="tutorial.css" />
 	</head>
 	<body>
 	<div id="aboutPageContainer" class="round">
