update with gold tags for all files; minor edits on intro; shortened/edited pages

--- a/tutorial/01.html
+++ b/tutorial/01.html
@@ -1,14 +1,13 @@
-<html>
-	<head>
-		<base href="https://krdwrd.org/pages/static/" /> 
+<head>
+	
+		<base href="https://krdwrd.org/pages/static/"> 
 		<title>Interactive KrdWrd Tutorial</title>
-		<link rel="stylesheet" type="text/css" href="tutorial.css" />
-	</head>
-	<body>
+		<link rel="stylesheet" type="text/css" href="tutorial.css">
+	</head><body class="">
 	<div id="aboutPageContainer" class="round">
 		<div class="bl">
-			<img src="kw.png" /> <div class="kwbig"> Interactive Tutorial</div>
-			<br />
+			<img src="kw.png"> <div class="kwbig"> Interactive Tutorial</div>
+			<br>
 			<i>
             Learn how to annotate pages in accordance with the annotation guidelines.
 			</i>
@@ -18,41 +17,40 @@
 		   This tutorial will help you getting used to the annotation guidelines.
 		   It assumes you are familiar with the
            <a href="https://krdwrd.org/manual/html/" onclick="window.open(this.href, 'KrdWrdManual', 'resizable=true,scrollbars=yes,status=no,toolbar=yes'); return false;">manual</a>
-           (click to open in a new window, suitable for side-by-side viewing with this one. Or print the
-           <a href="https://krdwrd.org/manual/manual.pdf">pdf</a>).
-           <h4>How it works</h4>
-           <p>
+           (click to open a new window, suitable for side-by-side viewing with this one. Or print the
+           <a class="" href="https://krdwrd.org/manual/manual.pdf">pdf</a>). <br>The tutorial walks you through 11 particular problems; successful completion will take about 15 minutes.<br><h4 class="">How it works</h4>
+           <p class="">
            The tutorial pretty much works like annotation on a real corpus: you
-           <ol>
-             <li>annotate a Web page,</li>
-             <li>submit it, and</li>
-             <li>get the next one.</li>
+           </p><ol class="">
+             <li class="">annotate a Web page,</li>
+             <li class="">submit it, and</li>
+             <li class="">get the next one.</li>
            </ol>
            However, we inserted a validation step after submission:
            The current page will be re-displayed and will show how your annotations diverged from ours:
-           </p>
+           <p></p>
            <p>
-           <ul>
-              <li>Everything you got right will be left untouched, as it appeared on the original site, without any annotation.</li>
-              <li>Everything you got wrong will be highlighted as it was supposed to be.</li>
+           </p><ul class="">
+              <li class="">Everything you got right will be light-colored, i.e. your annotation in light color.</li>
+              <li class="">Everything you got wrong will be highlighted as it was supposed to be.</li>
            </ul>
            Please take your time to go through this feedback carefully - you won't get any when working on the real corpus.
-           </p>
-           <p>
-           After inspection, you can click the <i>Next Page</i> button in the notification box at the top, or just use <i>Grab Page from Tutorial</i> from the KrdWrd status-bar menu, to advance.
-           You can return to your last tutorial step any time by hitting <i>Start Tutorial</i> once again.
+           <p></p>
+           <p class="">
+           After inspection, you can click the <i>Next Page</i> button in the notification box at the top, or just use <i class="">Grab Page from Tutorial</i> from the KrdWrd status-bar menu, to advance.
+           You can return to your last tutorial step at any time by hitting <i>Start Tutorial</i> once again.
            Reset it by deleting your annotations on your <i>My Stats</i> page.
            </p>
-           <h4>Start the tutorial</h4>
+           <h4 class="">Start the tutorial</h4>
            Now let's get going.
            Move around your mouse on this page.
-           <i>You did that right from the start, didn't you? Busy little bees you are!</i>
+           <i class="">You did that right from the start, didn't you? Busy little bees you are!</i>
            You should get fancy highlighting wherever you go. 
-           <ol>
-              <li>Annotate some of the text here to get used to the keyboard shortcuts.</li>
-              <li>Then click on <i>Submit</i> in the KrdWrd menu.</li>
-           You will get back to this page, with the validation result.
-              <li>Hit <i>Next Page</i> to get going with real pages.</li>
+           <ol class="">
+              <li class="">Annotate some of the text here to get used to the keyboard shortcuts.</li>
+              <li class="">Then click on <i class="">Submit</i> in the KrdWrd menu.</li>
+           You will get back to this page, with a validation result.
+              <li class="">Hit <i>Next Page</i> to get going with the 11 real pages.</li>
            </ol>
 		</div>
 		<!--div class="bl">
@@ -68,5 +66,4 @@
            </span>
 		</div-->
 	</div>
-	</body>
-</html>
+	</body><link href="chrome://krdwrd/content/krdwrd.css" type="text/css" rel="stylesheet">
